[FIX] website: fix misaligned elements in headers
This commit correctly aligns certain header elements when the CTA button
has a larger vertical padding.

Steps to reproduce the issue:

- Install 'eCommerce' on your website.
- In Website edit mode, click on the 'THEME' tab.
- Adjust the vertical padding of buttons to 25px.
- Click on the header in the page.
- In the 'STYLE' tab, select the 'Slogan' header.
- Bug: The 'user' selector is not aligned with the CTA button.
- In the 'STYLE' tab, select the 'Centered Logo' header.
- Bug: The 'user' selector and the 'cart' button are not aligned with
the CTA button.

task-3478334

closes odoo/odoo#145680

X-original-commit: d2f6710bcaa5cee7e77fc4df902929264ffa4830

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1191,6 +1191,9 @@ header {
     }
 } @else if o-website-value('header-template') == 'centered_logo' {
     header .o_header_centered_logo {
+        > li.nav-item {
+            align-self: center !important;
+        }
         @include media-breakpoint-up(lg) {
             width: 50%;
         }
@@ -1224,6 +1227,10 @@ header {
                 align-items: center !important;
             }
         }
+    }
+} @else if o-website-value('header-template') == 'slogan' {
+    #top_menu_container > ul.nav > li.nav-item {
+        align-self: center;
     }
 }
 
